# ttbinEditor

./: CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt  curveData.cpp  curveData.h  dataProcessor.cpp  dataProcessor.h  diagramScene.cpp  diagramScene.h  fileHandler.cpp  fileHandler.h  main.cpp  mainWindow.cpp  mainWindow.h
ui/: mainWindow.ui
